--- a/tesi.tex
+++ b/tesi.tex
@@ -104,13 +104,19 @@ Da scrivere in seguito\ldots                      %\ldots lascia tre puntini
 \linespread{1.5} 
 \newpage
 \section{Abstract}
- xxxx\\
+ Describing how, when and why species are present in a given territory is becoming more and more necessary in a world that changes very quickly.
+This is particularly important for studying how species interact as an ecological community and how these balances can change with the introduction of other species due, among other factors, to the climate change that forces many species to move towards more hospitable territories.
+The hypothesis was to be able to use the R package called colorist to represent the dynamics of the ecology community.
+Species distribution models were created to test the hypotheses. Based on the presence-absence method, a generalized linear model (GLM) was created and the colorist package was used for graphical representation.
+Thanks to the use of colors, it was possible to see which portions of space were shared by different species and which ones were more specific to a species.
+The use of colors based on the HCL palette, and precisely on the colors taken from the viridis palette, is important because it allows an effective reading of the representations even for people with color vision deficiency.
+The use of this package was therefore crucial for the representation of the data and places it as a useful tool for future studies not only of one, but for multiple species that make up an ecological community; this will allow us to better understand the population dynamics and enhance the conservation aspect of endangered species.
  
  
 \vspace{1cm}
-\textbf{Keywords}: x,x,x
+\textbf{Keywords}: colorist, biodiversity, species distribution models, climate change, colour vision deficiency, ecological community, presence-absence models
+\\
 
-\newpage
 \section{Introduction}
 \subsection{Biodiversity}
 \textit{"The most unique feature of Earth is the existence of life, and the most extraordinary feature of life is its diversity."} \citep{cardinale}.\\
